# Fullstack-project

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  dockerfile  pyproject.toml  requirements.txt
Frontend/app/src/: App.jsx
Frontend/app/src/components/Auth/: login.css
Frontend/app/src/components/Navbar/: NavBar.jsx
Frontend/app/src/pages/: Analyze.jsx  Login.jsx  Signup.jsx  analyze.css  home.css  home.jsx
Frontend/frontend/src/: App.jsx
Frontend/frontend/src/api/: client.js
Frontend/frontend/src/components/: PrivateRoutes.jsx
Frontend/frontend/src/components/Auth/: login.css
Frontend/frontend/src/components/Login/: login.css
Frontend/frontend/src/components/Navbar/: NavBar.jsx
Frontend/frontend/src/pages/: Analyze.jsx  Login.jsx  Signup.jsx
backend/: .gitignore  Models.py  config.py  database.py  health.py  limits.py  logger.py  main.py  models.py  routers.py  supabase_client.py  users.py  utils.py
backend/tests/: conftest.py  test_routers.py  test_user.py
