[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "mvp"
version = "0.1.0"
description = "Solve your daily problmes, what is really truth!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.133.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "requests==2.33.0",
    "python-dotenv==1.2.1",
    "google-genai==1.68.0",
    "sqlalchemy==2.0.47",
    "asyncpg==0.31.0",
]


[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "black==23.12.0",
    "ruff==0.1.8",
]

